Fix: remove redundant Collections.unmodifiableList wrapper
Co-authored-by: Haryuya11 <113567978+Haryuya11@users.noreply.github.com>